--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  assets:
+    - assets/images/
+    - assets/videos/
+    - assets/
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.5.0
+
+
 
 dev_dependencies:
   flutter_test:
