feat(map): replace Google Maps with Mapbox implementation
- Add Mapbox access token configuration for iOS and Android
- Update dependencies to use mapbox_maps_flutter
- Refactor search page to use Mapbox components and annotations
- Remove Google Maps related dependencies and code

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.mapbox.AccessToken"
+            android:value="pk.eyJ1IjoibWFydmluMjAwMSIsImEiOiJjbWdpaDRicTQwOTc3Mm9wcmd3OW5lNzExIn0.ISPECxmLq_6xhipoygxtFg" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
