--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   video_player: ^2.8.1
   http: ^1.1.0
-  google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   permission_handler: ^11.1.0
+  mapbox_maps_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +24,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/images/
     - assets/videos/
