feat(auth): implement auth service with token storage and API integration
feat(profile): add profile service with nested user data handling

feat(properties): create property service and entities

refactor(user): update user model to match API requirements

refactor(config): update API endpoints and base URL

feat(main): initialize auth service on app start

style(textfield): add maxLines and onTap to custom text field

chore(deps): add shared_preferences package

docs: add requirements, tasks and design documents for profile fixes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   geolocator: ^10.1.0
   permission_handler: ^11.1.0
   mapbox_maps_flutter: ^2.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
