--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   video_player: ^2.8.1
   http: ^1.1.0
+  dio: ^5.4.0
   geolocator: ^10.1.0
   permission_handler: ^11.1.0
   mapbox_maps_flutter: ^2.0.0
   shared_preferences: ^2.2.2
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
