feat(home): add swipe property card and match modal components
- Implement SwipePropertyCard widget with image carousel and interactive elements
- Add MatchModal for displaying successful property matches
- Integrate auto_size_text package for responsive text sizing
- Update home page UI with new swipe deck and action buttons
- Improve profile image handling in home page
- Refactor property card styling and interactions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   mapbox_maps_flutter: ^2.0.0
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
