feat(matching): implement matching system integration with API
Add new MatchingService for property recommendations and feedback actions
Connect swipe gestures and buttons to matching API endpoints
Update profile service with favorites API support
Add location permissions and websocket dependencies
Refactor property feed to use matching recommendations
Improve token refresh handling in ApiService

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,11 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>MGLMapboxAccessToken</key>
-	<string>pk.eyJ1IjoibWFydmluMjAwMSIsImEiOiJjbWdpaDRicTQwOTc3Mm9wcmd3OW5lNzExIn0.ISPECxmLq_6xhipoygxtFg</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Esta aplicación necesita acceso a la cámara para tomar fotos de perfil.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Esta aplicación necesita acceso a la galería de fotos para seleccionar imágenes de perfil.</string>
+  <key>MGLMapboxAccessToken</key>
+  <string>pk.eyJ1IjoibWFydmluMjAwMSIsImEiOiJjbWdpaDRicTQwOTc3Mm9wcmd3OW5lNzExIn0.ISPECxmLq_6xhipoygxtFg</string>
+  <key>NSCameraUsageDescription</key>
+  <string>Esta aplicación necesita acceso a la cámara para tomar fotos de perfil.</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Esta aplicación necesita acceso a la galería de fotos para seleccionar imágenes de perfil.</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Habitto necesita tu ubicación para mostrar el mapa y recomendaciones cercanas.</string>
 </dict>
 </plist>
