--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
   auto_size_text: ^3.0.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
