--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   dio: ^5.4.0
   geolocator: ^10.1.0
   permission_handler: ^11.1.0
-  mapbox_maps_flutter: ^2.0.0
+  mapbox_maps_flutter: 2.11.0
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
   auto_size_text: ^3.0.0
