--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   mapbox_maps_flutter: 2.11.0
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
+  camera: ^0.10.5+7
   auto_size_text: ^3.0.0
   web_socket_channel: ^2.4.0
 
