--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,17 @@ dependencies:
   camera: ^0.10.5+7
   auto_size_text: ^3.0.0
   web_socket_channel: ^2.4.0
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.0.0
+  sign_in_with_apple: ^6.0.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  image: ^4.1.3
 
 flutter:
   uses-material-design: true
