--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.0.0
   sign_in_with_apple: ^6.0.0
+  speech_to_text: ^6.3.0
   fluttertoast: ^8.2.4
 
 dev_dependencies:
@@ -32,6 +33,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
   image: ^4.1.3
 
 flutter:
@@ -62,3 +64,10 @@ flutter_launcher_icons:
   adaptive_icon_background: "#FFFFFF"
   adaptive_icon_foreground: "assets/images/logoHabitto.png"
   remove_alpha_ios: true
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "assets/images/logoHabitto.png"
+  android_12:
+    image: "assets/images/logoHabitto.png"
+    icon_background_color: "#FFFFFF"
