--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   cupertino_icons: ^1.0.6
   video_player: ^2.8.1
   http: ^1.1.0
@@ -37,6 +40,7 @@ dev_dependencies:
   image: ^4.1.3
 
 flutter:
+  generate: true
   uses-material-design: true
 
   assets:
