refactor: replace withOpacity with withValues for alpha values
Standardize alpha value handling across the codebase by replacing all instances of `withOpacity` with `withValues(alpha:)` for consistency and better readability. Also includes test updates and minor l10n config change.

--- a/l10n.yaml
+++ b/l10n.yaml
@@ -3,4 +3,4 @@ template-arb-file: app_es.arb
 output-dir: lib/generated
 output-localization-file: l10n.dart
 output-class: S
-synthetic-package: false
+nullable-getter: false
