--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   speech_to_text: ^7.0.0
   fluttertoast: ^8.2.4
   cached_network_image: ^3.4.1
+  flutter_svg: ^2.2.3
 
 dev_dependencies:
   flutter_test:
