--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   fluttertoast: ^8.2.4
   cached_network_image: ^3.4.1
   flutter_svg: ^2.2.3
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
 
 dev_dependencies:
   flutter_test:
