--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^2.2.3
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
